manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "akscluster-a048"
    labels:
        app: "akscluster-a048"
spec:
    type: ClusterIP
    ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
    selector:
        app: "akscluster-a048"
